[gd_scene load_steps=3 format=3 uid="uid://douyxwjscs4ff"]

[ext_resource type="Script" path="res://ui/inventory/world_inventory.gd" id="1_auvkm"]
[ext_resource type="Script" path="res://ui/inventory/world_inventory_grid.gd" id="2_f23fe"]

[node name="WorldInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_auvkm")

[node name="InventoryBase" type="Panel" parent="." groups=["inventory_controls"]]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 576.0
grow_vertical = 2

[node name="WorldInventoryGrid" type="GridContainer" parent="InventoryBase" groups=["inventory_controls"]]
modulate = Color(0.686275, 0.686275, 0.686275, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -128.0
offset_right = 112.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 7
script = ExtResource("2_f23fe")
